website/i18n/ru/docusaurus-plugin-content-docs/version-0.0.28/operations/troubleshooting.md
---
title: Устранение неполадок
sidebar_position: 3
description: Общие проблемы с Engram и способы их решения.
---

# Устранение неполадок

Первый шаг: выполните команду `engram entry` и откройте вкладку **Runtime**. На ней отображаются разрешенный профиль, корни памяти, основная конфигурация, маршрутизация, граф и статус Git.

## Память не загружается

- Запустите `engram load --dry-run "<задача>"`, чтобы проверить количество кандидатов и сужающие теги.
- Проверьте `engram config view` на наличие параметров `enabled`, `read` и `load.limit`.
- Убедитесь, что память рабочего пространства существует в папке `.agents/.engram/`.
- Выполните `engram verify`, чтобы проверить хэши.

## Хуки не внедряются

- Убедитесь, что статус `engram set-read status` не установлен в значение `off` или `manual`.
- Проверьте связь хоста: `engram link <цель>`.
- Перезапустите или перезагрузите хост после выполнения `link`/`unlink` (особенно для OpenCode).
- Проверьте `engram set-proof status` на предмет видимости проверочной строки (proof line).

## Сбой сохранения

- Прочтите превью утверждения для получения подсказок о связанной памяти.
- Если режим автопринятия (accept-all) сообщил о связанной памяти, ни один файл не был сохранен. Перезапустите команду с кандидатами `DEPENDS_ON` или `UPDATE`.
- Проверьте ошибки валидации схемы, секретов и сканирования инъекций подсказок в выводе CLI.

## Путаница с профилями

- Выполните команду `engram profile status`.
- Убедитесь в правильности настроек `default_profile` рабочего пространства и активного профиля пользователя.
- Помните: явный профиль, отличный от профиля по умолчанию для рабочего пространства, отключает память рабочего пространства для этой команды.

## Неверные файлы памяти

```bash
engram verify
engram repair
engram rebuild-index
engram graph --rebuild
```

## Устаревшие адаптеры после обновления пакета

```bash
engram upgrade
engram upgrade --latest
engram link all
```

Используйте `--force` только при намеренной замене сгенерированных файлов адаптеров Engram.

## БД конфигурации SQLite недоступна

Обычные команды чтения/записи переходят на использование снимков конфигурации JSON. Команды, привязанные к БД, сообщают о недоступности SQLite вместо блокирования стандартного использования памяти.

## Проблемы синхронизации глобального Git

- Убедитесь, что параметр `global_git.enabled` равен `true`.
- Проверьте, является ли `global_git.remote_url` допустимым удаленным URL-адресом Git.
- Просмотрите `global_git.auto_resolve` — авторазрешение конфликтов может скрывать разницу в версиях памяти.
- Запустите вкладку Runtime в `engram entry`, чтобы изучить состояние `global_git_detected`.

## Следующие шаги

- [Часто задаваемые вопросы (FAQ)](faq.md)
- [CLI: verify / repair / quality-check](../cli/verify-repair-quality.md)

## Git author identity

Engram can store a global author and an optional workspace override. Resolution is workspace, global, then read-only Git fallback. Settings affect future memories only; a workspace override never changes global Git configuration. Use explicit plan and confirmation for global Git sync or legacy-memory migration.

```bash
engram author show
engram author set --name "Jane Doe" --email "jane@example.com"
engram author unset --scope workspace
engram author sync-git-global --plan
engram author sync-git-global --confirm
engram author migrate-memories --plan
engram author migrate-memories --confirm
```

Read the complete [Git author settings guide](../operations/git-author-settings.md).
